--- a/최소직사각형.ipynb
+++ b/최소직사각형.ipynb
@@ -1,68 +1,57 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "c440261a",
+   "cell_type": "markdown",
+   "id": "ea3c6c71",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15\n",
-      "8\n"
-     ]
-    }
-   ],
    "source": [
-    "sizes = [[10, 7], [12, 3], [8, 15], [14, 7], [5, 15]]\n",
-    "import numpy as np\n",
-    "\n",
-    "print(np.max(np.array(sizes)[:]))\n",
-    "print(max(np.min(sizes,axis=1)))\n"
+    "**위클리 챌린지**\n",
+    "**LEVEL : 1**\n",
+    "[문제링크](https://programmers.co.kr/learn/courses/30/lessons/86491)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "1e1fc586",
+   "execution_count": 25,
+   "id": "dab232b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sizes = [[10, 7], [12, 3], [8, 15], [14, 7], [5, 15]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "99d8c7c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(sizes):\n",
+    "    \n",
+    "    import numpy as np\n",
+    "    return int(np.max(np.array(sizes)[:])*max(np.min(np.array(sizes),axis=1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7e8ea77c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[14, 7]"
+       "120"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max(sizes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "41562a58",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "50"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "max(np.min(np.array(sizes),axis=1))"
+    "solution(sizes)"
    ]
   }
  ],
