--- a/문자열 내 p와 y의 개수.ipynb
+++ b/문자열 내 p와 y의 개수.ipynb
@@ -2,56 +2,60 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ea3c6c71",
+   "id": "6e5eab15",
    "metadata": {},
    "source": [
-    "**위클리 챌린지**  \n",
-    "**LEVEL : 1**  \n",
-    "[문제링크](https://programmers.co.kr/learn/courses/30/lessons/86491)  "
+    "**연습문제**  \n",
+    "**LEVEL : 1**   \n",
+    "[문제링크](https://programmers.co.kr/learn/courses/30/lessons/12916)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "dab232b9",
+   "execution_count": 1,
+   "id": "5c65f183",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sizes = [[10, 7], [12, 3], [8, 15], [14, 7], [5, 15]]"
+    "s = \"pPoooyY\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "99d8c7c3",
+   "execution_count": 2,
+   "id": "6fb08a7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(sizes):\n",
+    "def solution(s):\n",
     "    \n",
-    "    import numpy as np\n",
-    "    return int(np.max(np.array(sizes)[:])*max(np.min(np.array(sizes),axis=1)))"
+    "    \n",
+    "    s = s.lower()\n",
+    "    nump = [p for p in s if p == 'p']\n",
+    "    numy = [y for y in s if y == 'y']\n",
+    "    \n",
+    "    return len(nump)==len(numy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "7e8ea77c",
+   "execution_count": 4,
+   "id": "316b5b5e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "120"
+       "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solution(sizes)"
+    "solution(s)"
    ]
   }
  ],
