--- a/문자열 내림차순으로 배치하기.ipynb
+++ b/문자열 내림차순으로 배치하기.ipynb
@@ -2,56 +2,63 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ea3c6c71",
+   "id": "6cb86f30",
    "metadata": {},
    "source": [
-    "**위클리 챌린지**  \n",
-    "**LEVEL : 1**  \n",
-    "[문제링크](https://programmers.co.kr/learn/courses/30/lessons/86491)  "
+    "**연습문제**  \n",
+    "**LEVEL : 1**   \n",
+    "[문제링크](https://programmers.co.kr/learn/courses/30/lessons/12917)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "dab232b9",
+   "execution_count": 24,
+   "id": "19bf0b87",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sizes = [[10, 7], [12, 3], [8, 15], [14, 7], [5, 15]]"
+    "s = \"Zbcdefg\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "99d8c7c3",
+   "execution_count": 47,
+   "id": "3ba49f3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(sizes):\n",
+    "def solution(s):\n",
+    "    import re\n",
+    "    up_compile = re.compile('[A-Z]')\n",
+    "    low_compile = re.compile('[a-z]')\n",
     "    \n",
-    "    import numpy as np\n",
-    "    return int(np.max(np.array(sizes)[:])*max(np.min(np.array(sizes),axis=1)))"
+    "    upper = up_compile.findall(s)\n",
+    "    upper.sort(reverse=True)\n",
+    "    lower = low_compile.findall(s)\n",
+    "    lower.sort(reverse=True)\n",
+    "    \n",
+    "    return ''.join(lower+upper)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "7e8ea77c",
+   "execution_count": 49,
+   "id": "172af5ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "120"
+       "'gfedcbZ'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solution(sizes)"
+    "solution(s)"
    ]
   }
  ],
