--- a/문자열 다루기 기본.ipynb
+++ b/문자열 다루기 기본.ipynb
@@ -2,56 +2,58 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ea3c6c71",
+   "id": "1a7d0259",
    "metadata": {},
    "source": [
-    "**위클리 챌린지**  \n",
-    "**LEVEL : 1**  \n",
-    "[문제링크](https://programmers.co.kr/learn/courses/30/lessons/86491)  "
+    "**연습문제**  \n",
+    "**LEVEL : 1**   \n",
+    "[문제링크](https://programmers.co.kr/learn/courses/30/lessons/12918)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "dab232b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sizes = [[10, 7], [12, 3], [8, 15], [14, 7], [5, 15]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "99d8c7c3",
+   "execution_count": 14,
+   "id": "0f3ec636",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(sizes):\n",
-    "    \n",
-    "    import numpy as np\n",
-    "    return int(np.max(np.array(sizes)[:])*max(np.min(np.array(sizes),axis=1)))"
+    "s = 'a1234'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "7e8ea77c",
+   "execution_count": 15,
+   "id": "913a81c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(s):\n",
+    "    import re \n",
+    "    p = re.compile('[0-9]')\n",
+    "    pp = p.findall(s)\n",
+    "    return (len(pp)== 4 or len(pp)== 6) and (''.join(pp) == s)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6f2eeea3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "120"
+       "False"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solution(sizes)"
+    "solution(s)"
    ]
   }
  ],
