--- a/멀쩡한 사각형.ipynb
+++ b/멀쩡한 사각형.ipynb
@@ -12,50 +12,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 105,
    "id": "53ba3194",
    "metadata": {},
    "outputs": [],
    "source": [
-    "w = 2\n",
-    "h = 3"
+    "w = 8\n",
+    "h = 12"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "6a9ed2f8",
+   "execution_count": 106,
+   "id": "91478f4c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def solution(w,h):\n",
     "    \n",
-    "    minnum = min(w,h)\n",
-    "    maxnum = max(w,h)\n",
-    "    \n",
-    "    for i in range(1, minnum+1):\n",
-    "        if (maxnum/minnum*i).is_integer():\n",
-    "            unit_min = i\n",
-    "            unit_max = maxnum/minnum*i\n",
+    "    m = max(w,h)\n",
+    "    n = min(w,h)\n",
+    "\n",
+    "    while True:\n",
+    "        tmp = m % n\n",
+    "        if tmp == 0:\n",
+    "            gcd = n\n",
     "            break\n",
-    "            \n",
-    "    unit = unit_min + unit_max - 1\n",
-    "    return w*h - (unit* (maxnum//unit_max))"
+    "        m, n = max(n,tmp), min(n,tmp)\n",
+    "        \n",
+    "    return w*h - (w+h-gcd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "20790e1f",
+   "execution_count": 107,
+   "id": "279a6c47",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.0"
+       "80"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
