--- a/더 맵게.ipynb
+++ b/더 맵게.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ffbbf4ff",
+   "id": "11632ffe",
    "metadata": {},
    "source": [
     "**힙(Heap)**  \n",
@@ -12,86 +12,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "9058aa40",
+   "execution_count": 152,
+   "id": "65fc0c76",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scoville = [0,0,0,0,0,1]\n",
-    "K = 1"
+    "scoville = [1, 2, 3, 9, 10, 12]\n",
+    "K = 7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "3eadde1c",
+   "execution_count": 153,
+   "id": "4b19e83f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def solution(scoville, K):\n",
+    "    import heapq\n",
     "    \n",
-    "    if sum(scoville)==0 or K==0:\n",
-    "        if K==0:\n",
-    "            return 0\n",
-    "        else:\n",
-    "            return -1\n",
+    "    if sum(scoville) == 0:\n",
+    "        return -1\n",
     "    \n",
+    "    heapq.heapify(scoville)\n",
     "    cnt = 0\n",
-    "    while len(scoville)>1 and min(scoville)<K :\n",
+    "    while scoville[0] < K and len(scoville) > 1:\n",
     "        \n",
-    "        scoville.sort()\n",
-    "        fmin = scoville.pop(0)\n",
-    "        scoville.sort()\n",
-    "        smin = scoville.pop(0)\n",
-    "        \n",
-    "        scoville.append(fmin+smin*2)\n",
+    "        fmin = heapq.heappop(scoville)\n",
+    "        smin = heapq.heappop(scoville)\n",
+    "        heapq.heappush(scoville, fmin+smin*2)\n",
     "    \n",
     "        cnt+=1\n",
+    "        \n",
+    "    if scoville[0] < K: return -1 \n",
     "    return cnt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "15e014b9",
+   "execution_count": 154,
+   "id": "11ebe9ab",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "2"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "solution(scoville, K)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "24bf03d2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 3, 4]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = [1,2,3,4]\n",
-    "a.pop(0)\n",
-    "a"
    ]
   }
  ],
