--- a/수식 최대화.ipynb
+++ b/수식 최대화.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f580410a",
+   "id": "b67529c0",
    "metadata": {},
    "source": [
-    "**2020 카카오 인턴십**  \n",
+    "**2020 KAKAO 인턴십**  \n",
     "**LEVEL : 2**   \n",
     "[문제링크](https://programmers.co.kr/learn/courses/30/lessons/67257)  \n",
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d1a0b0ca",
+   "id": "e8befd55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9b21c2a2",
+   "id": "3998633f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "12db4128",
+   "id": "11e2c3c1",
    "metadata": {},
    "outputs": [
     {
