--- a/튜플.ipynb
+++ b/튜플.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0e8c0f30",
+   "id": "a2ff5b0e",
    "metadata": {},
    "source": [
-    "**2019 카카오 개발자 겨울 인턴십**  \n",
+    "**2019 KAKAO 개발자 겨울 인턴십**  \n",
     "**LEVEL : 2**   \n",
     "[문제링크](https://programmers.co.kr/learn/courses/30/lessons/64065)  "
    ]
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "e7d9108e",
+   "id": "f03cbc50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "eedd9d90",
+   "id": "26e70c36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "25c88326",
+   "id": "9e618b5a",
    "metadata": {},
    "outputs": [
     {
