--- a/튜플.ipynb
+++ b/튜플.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a2ff5b0e",
+   "id": "4247e7b4",
    "metadata": {},
    "source": [
     "**2019 KAKAO 개발자 겨울 인턴십**  \n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "f03cbc50",
+   "id": "e87cd9fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "26e70c36",
+   "id": "7c014659",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "9e618b5a",
+   "execution_count": 61,
+   "id": "430860f4",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,46 @@
        "[3, 2, 4, 1]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "007cab53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(s):\n",
+    "    import re\n",
+    "    elements = re.findall('\\d+', s)\n",
+    "\n",
+    "    dict = {}\n",
+    "    for i in set(elements):\n",
+    "        dict[i] = elements.count(i)\n",
+    "\n",
+    "    return list(map(int, [k for k, v in sorted(dict.items(), key = lambda x: x[1], reverse=True)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "6d7f842a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 2, 4, 1]"
+      ]
+     },
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
